# plerk-api

./: .env.sample  Dockerfile  PROBLEM-STATEMENT.md  README.md  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
plerk/: __init__.py  celery.py  settings.py  urls.py
plerk/apps/api/: apps.py  urls.py
plerk/apps/api/companies/: serializers.py  urls.py  views.py
plerk/apps/api/transactions/: serializers.py  urls.py  views.py
plerk/apps/companies/: admin.py  apps.py  managers.py  models.py  tasks.py
plerk/apps/companies/migrations/: 0001_initial.py
plerk/apps/core/: admin.py  apps.py  managers.py  models.py
plerk/apps/core/migrations/: 0001_initial.py
plerk/apps/transactions/: admin.py  apps.py  managers.py  models.py  tasks.py
plerk/apps/transactions/migrations/: 0001_initial.py  0002_transaction_tax_value.py
plerk/apps/utils/: apps.py  auth_backends.py  managers.py  models.py  tasks.py
utility/: db_schema.mwb  load_csv_to_database.py  uwsgi.ini
utility/nginx-vhost.d/: plerk-api.devlance.me_location
